--- a/pages/all-quotes.html
+++ b/pages/all-quotes.html
@@ -29,7 +29,7 @@
 	          <a href="../index.html" ><img src="../imgs/logo/Logo RQ png.png" alt="Logo" class="logo" ></a>
 
 	          <ul class="list">
-	            <li><a href="pages/all-quotes.html">Все цитаты</a></li>
+	            <li><a href="">Все цитаты</a></li>
 	            <li>
 	              <ul>
 	                <li><a href="jojo.html">JoJo’s Bizarre Adventure</a></li>
