--- a/pages/all-quotes.html
+++ b/pages/all-quotes.html
@@ -51,7 +51,8 @@
 	    </div>
     </nav>
 
-	<p id="testt">	"Без боли кто бы знал, что такое наслаждение? (1 сезон, 6 серия, автор: сестра Поко)"<br>
+    <div class="container">
+	    <p id="testt">	"Без боли кто бы знал, что такое наслаждение? (1 сезон, 6 серия, автор: сестра Поко)"<br>
       "Чего ты боишься больше всего на свете? Больше всего ты боишься боли. Боль страшна? ... Ты не думаешь, что гораздо страшнее стать человеком, который не в состоянии сделать что-то сам? (сезон: 1, серия: 6, автор: сестра Поко)"<br>
       "Человек взрослеет, побеждая над своим жалким прошлым. (сезон: 5, серия: 33, автор: Дьяволо)"<br>
       "Тот, кто смеётся с закрытыми глазами, да ещё скрестив руки, точно знает, что выиграет. (сезон: -, серия: -, автор: Джозеф Джостар)"<br>
@@ -63,7 +64,8 @@
       "Паника — признак слабости духа. (сезон: 5, серия: 16, автор: Пешши)",
       "Он из того типа людей, которые становятся сильнее, когда пытаешься их сломить. (сезон: 1, серия: 1, автор: Дио Брандо о ДжоДжо)"<br>
       "Я ждал этого момента четыре... нет, пять тысяч лет! (сезон:- , серия:- , автор: Карс) </p>
-
+    </div>
+    
 	<script src="../js/jojo.js"></script>
 	<script src="../js/nav.js"></script>
 </body>
