--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
 	            <li>
 	              <ul>
 	                <li><a href="pages/jojo.html">JoJo’s Bizarre Adventure</a></li>
-	                <li><a href="#">Брат</a></li>
-	                <li><a href="#">Папич</a></li>
+	                <li><a href="pages/papich.html">Папич</a></li>
+	                <li><a href="">Куссия</a></li>
 	                <!-- потом сделаю -->
 	                <!-- <div class="dropdown">
 					  <div class="dropbtn">RU</div>
@@ -56,7 +56,7 @@
 
     <div class="title">
     	<div class="container">
-    		<h1 class="main-title">About Random Quotes</h1>
+    		<h1 class="main-title">О проекте Random Quotes</h1>
     	</div>
     </div>
 
@@ -64,13 +64,13 @@
 		<p>Random Quotes ©️ это бесплатный проект для генерации случайной цитаты из фильма или аниме. Сейчас в нем есть только фразы из аниме "Невероятные приключения Джоджо", но скоро в нем будет много нового.</p>
 	</div>
 
-	<button id="jojo-btn" class="jojo-btn" onclick="document.location='pages/jojo.html'">Отправиться на страницу по ДжоДжо</button>
+	<button id="jojo-btn" class="jojo-btn" onclick="document.location='pages/jojo.html'">Цитаты из ДжоДжо</button>
+	<button id="jojo-btn" class="jojo-btn" onclick="document.location='pages/papich.html'">Цитаты Папича</button>
 
 	<form action="https://scramble22.github.io/My-portfolio/" target="_blank">
     	<button id="jojo-btn" class="jojo-btn">О разработчике</button>
 	</form>
 
-	<script src="js/jojo.js"></script>
 	<script src="js/nav.js"></script>
 </body>
 </html>
