--- a/pages/papich-ppl.html
+++ b/pages/papich-ppl.html
@@ -32,8 +32,8 @@
 					<li><a href="all-quotes.html">Все цитаты</a></li>
 					<li>
 				  	<ul>
-						<li><a href="">JoJo’s Bizarre Adventure</a></li>
-						<li><a href="papich.html">Папич</a></li>
+						<li><a href="jojo.html">JoJo’s Bizarre Adventure</a></li>
+						<li><a href="">Папич</a></li>
 						<li><a href="#">Куссия</a></li>
 				  	</ul>
 					</li>
@@ -53,17 +53,17 @@
 
 	<div class="title">
 		<div class="container">
-			<h2 class="title-1">JoJo’s Bizarre Adventure</h2>
+			<h2 class="title-2">Папич</h2>
 		</div>
 	</div>
 
-	<button id="changeQuote" class="changeQuote">Выдать цитату</button>
+	<button id="changeQuote" class="changeQuote">Выдать персонажа</button>
 	<div class="container">
 		<p id="test"></p>
 	</div>
 
 
-	<script src="../js/jojo.js"></script>
+	<script src="../js/papich-ppl.js"></script>
 	<script src="../js/nav.js"></script>
 </body>
 </html>
