--- a/pages/all-quotes.html
+++ b/pages/all-quotes.html
@@ -29,12 +29,12 @@
 	          <a href="../index.html" ><img src="../imgs/logo/Logo RQ png.png" alt="Logo" class="logo" ></a>
 
 	          <ul class="list">
-	            <li><a href="">Все цитаты</a></li>
+	            <li><a href="pages/all-quotes.html">Все цитаты</a></li>
 	            <li>
 	              <ul>
 	                <li><a href="jojo.html">JoJo’s Bizarre Adventure</a></li>
-	                <li><a href="#">Брат</a></li>
-	                <li><a href="#">Папич</a></li>
+	                <li><a href="papich.html">Папич</a></li>
+	                <li><a href="#">Куссия</a></li>
 	                <!-- потом сделаю -->
 	                <!-- <div class="dropdown">
 					  <div class="dropbtn">RU</div>
@@ -51,21 +51,11 @@
 	    </div>
     </nav>
 
-    <div class="container">
-	    <p id="testt">	"Без боли кто бы знал, что такое наслаждение? (1 сезон, 6 серия, автор: сестра Поко)"<br>
-      "Чего ты боишься больше всего на свете? Больше всего ты боишься боли. Боль страшна? ... Ты не думаешь, что гораздо страшнее стать человеком, который не в состоянии сделать что-то сам? (сезон: 1, серия: 6, автор: сестра Поко)"<br>
-      "Человек взрослеет, побеждая над своим жалким прошлым. (сезон: 5, серия: 33, автор: Дьяволо)"<br>
-      "Тот, кто смеётся с закрытыми глазами, да ещё скрестив руки, точно знает, что выиграет. (сезон: -, серия: -, автор: Джозеф Джостар)"<br>
-      "Всё начинается с осознания собственных слабостей. (сезон: 2, серия: 17, автор: -)"<br>
-      "Ты же знаешь блох, да? Этих маленьких насекомых? Хоть мы, люди, и великаны для них, они всё равно нападают на нас. Можешь ли ты сказать, что это отвага? Нет, блохи не обладают отвагой. Тогда что такое отвага? Отвага — это познание страха! Преодоление его и подчинение! (сезон: 1, серия: 4, автор: Уильям Цеппели )"<br>
-      "В нашей жизни бывают ситуации, когда возможности выбрать правильный путь у нас нет. (сезон: 5, серия: 20, автор: рассказчик)"<br>
-      "Но, как говорится, ни одно доброе дело не остается безнаказанным. (сезон: 1, серия: 10, автор: -)"<br>
-      "— Мерзавец, ты хоть помнишь, сколько жизней погубил, чтобы излечить свои раны? — А ты помнишь, сколько хлеба съел за свою жизнь? (сезон: 1, серия: 5, автор: Уильям Цеппели и Дио Брандо)"<br>
-      "Паника — признак слабости духа. (сезон: 5, серия: 16, автор: Пешши)",
-      "Он из того типа людей, которые становятся сильнее, когда пытаешься их сломить. (сезон: 1, серия: 1, автор: Дио Брандо о ДжоДжо)"<br>
-      "Я ждал этого момента четыре... нет, пять тысяч лет! (сезон:- , серия:- , автор: Карс) </p>
-    </div>
-    
+	<div class="container">
+		<p id="testt">На этой странице можно будет получить случайную цитату из всех, которые будут на сайте (Пока что не работает)</p>
+	</div>
+
+
 	<script src="../js/jojo.js"></script>
 	<script src="../js/nav.js"></script>
 </body>
