--- a/index.html
+++ b/index.html
@@ -37,7 +37,8 @@
 	              <ul>
 	                <li><a href="pages/jojo.html">JoJo’s Bizarre Adventure</a></li>
 	                <li><a href="pages/papich.html">Папич</a></li>
-	                <li><a href="">Куссия</a></li>
+	                <li><a href="pages/papich-ppl.html">Папич в картинках</a></li>
+	                <li><a href="pages/kussia.html">Куссия в картинках</a></li>
 	                <!-- потом сделаю -->
 	                <!-- <div class="dropdown">
 					  <div class="dropbtn">RU</div>
@@ -66,10 +67,20 @@
 
 	<button id="jojo-btn" class="jojo-btn" onclick="document.location='pages/jojo.html'">Цитаты из ДжоДжо</button>
 	<button id="jojo-btn" class="jojo-btn" onclick="document.location='pages/papich.html'">Цитаты Папича</button>
+	<button id="jojo-btn" class="jojo-btn" onclick="document.location='pages/papich-ppl.html'">Цитаты Папича в картинках</button>
 
 	<form action="https://scramble22.github.io/My-portfolio/" target="_blank">
     	<button id="jojo-btn" class="jojo-btn">О разработчике</button>
 	</form>
+
+	<ul class="social">
+        <li>
+          <a href="https://vk.com/alexey_hramenkov"><img src="imgs/icons/vk.svg" /></a>
+        </li>
+        <li>
+          <a href="https://github.com/Scramble22/"><img src="imgs/icons/gitHub.svg" /></a>
+        </li>
+    </ul>
 
 	<script src="js/nav.js"></script>
 </body>
