--- a/pages/jojo.html
+++ b/pages/jojo.html
@@ -34,7 +34,8 @@
 				  	<ul>
 						<li><a href="">JoJo’s Bizarre Adventure</a></li>
 						<li><a href="papich.html">Папич</a></li>
-						<li><a href="#">Куссия</a></li>
+						<li><a href="papich-ppl.html">Папич в картинках</a></li>
+						<li><a href="kussia.html">Куссия в картинках</a></li>
 				  	</ul>
 					</li>
 			  	</ul>
@@ -53,7 +54,7 @@
 
 	<div class="title">
 		<div class="container">
-			<h2 class="title-1">JoJo’s Bizarre Adventure</h2>
+			<h1 class="title-1">JoJo’s Bizarre Adventure</h1>
 		</div>
 	</div>
 
