--- a/pages/kussia.html
+++ b/pages/kussia.html
@@ -4,15 +4,15 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css"
-      integrity="sha512-+4zCK9k+qNFUR5X+cKL9EIR+ZOhtIloNl9GIKS57V1MyNsYpYcUrUeQc9vNfzsWfV28IaLL3i96P9sdNyeRssA=="
-      crossorigin="anonymous"
-    />
-    <link rel="stylesheet" href="../css/nav-style.css" />
-    <link rel="stylesheet" href="../css/main.css" />
-    <link rel="icon" href="../imgs/logo/Logo RQ png.png">
-	<title>Random Quotes</title>
+	  rel="stylesheet"
+	  href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css"
+	  integrity="sha512-+4zCK9k+qNFUR5X+cKL9EIR+ZOhtIloNl9GIKS57V1MyNsYpYcUrUeQc9vNfzsWfV28IaLL3i96P9sdNyeRssA=="
+	  crossorigin="anonymous"
+	/>
+	<link rel="stylesheet" href="../css/nav-style.css" />
+	<link rel="stylesheet" href="../css/main.css" />
+	<link rel="icon" href="../imgs/logo/Logo RQ png.png">
+	<title>Kussia png</title>
 </head>
 <body>
 	<nav class="nav">
@@ -26,7 +26,7 @@
 	            <i class="fas fa-times"></i>
 	          </button>
 
-	          <a href="../index.html" ><img src="../imgs/logo/Logo RQ png.png" alt="Logo" class="logo" ></a>
+	          <a href="index.html" ><img src="../imgs/logo/Logo RQ png.png" alt="Logo" class="logo" ></a>
 
 	          <ul class="list">
 	            <li><a href="pages/all-quotes.html">Все цитаты</a></li>
@@ -35,7 +35,7 @@
 	                <li><a href="jojo.html">JoJo’s Bizarre Adventure</a></li>
 	                <li><a href="papich.html">Папич</a></li>
 	                <li><a href="papich-ppl.html">Папич в картинках</a></li>
-	                <li><a href="kussia.html">Куссия в картинках</a></li>
+	                <li><a href="">Куссия в картинках</a></li>
 	                <!-- потом сделаю -->
 	                <!-- <div class="dropdown">
 					  <div class="dropbtn">RU</div>
@@ -52,12 +52,19 @@
 	    </div>
     </nav>
 
+    <div class="title">
+		<div class="container">
+			<h1 class="title-1">Kussia</h1>
+		</div>
+	</div>
+
+	<button id="changeQuote" class="changeQuote">Выдать смешного кашу</button>
 	<div class="container">
-		<p id="testt">На этой странице можно будет получить случайную цитату из всех, которые будут на сайте (Пока что не работает)</p>
+		<img src="" id="photo" alt="" class="photo">
 	</div>
 
 
-	<script src="../js/jojo.js"></script>
+	<script src="../js/kussia.js"></script>
 	<script src="../js/nav.js"></script>
 </body>
 </html>
