--- a/pages/papich-ppl.html
+++ b/pages/papich-ppl.html
@@ -12,7 +12,7 @@
 	<link rel="stylesheet" href="../css/nav-style.css" />
 	<link rel="stylesheet" href="../css/main.css" />
 	<link rel="icon" href="../imgs/logo/Logo RQ png.png">
-	<title>Jojo's Random Quotes</title>
+	<title>Papich.png Random Quotes</title>
 </head>
 <body>
 	<nav class="nav">
@@ -33,8 +33,9 @@
 					<li>
 				  	<ul>
 						<li><a href="jojo.html">JoJo’s Bizarre Adventure</a></li>
-						<li><a href="">Папич</a></li>
-						<li><a href="#">Куссия</a></li>
+						<li><a href="papich.html">Папич</a></li>
+						<li><a href="papich-ppl.html">Папич в картинках</a></li>
+						<li><a href="kussia.html">Куссия в картинках</a></li>
 				  	</ul>
 					</li>
 			  	</ul>
@@ -53,13 +54,14 @@
 
 	<div class="title">
 		<div class="container">
-			<h2 class="title-2">Папич</h2>
+			<h1 class="title-2">Папич</h1>
 		</div>
 	</div>
 
 	<button id="changeQuote" class="changeQuote">Выдать персонажа</button>
 	<div class="container">
 		<p id="test"></p>
+		<img src="" id="photo" alt="" class="photo">
 	</div>
 
 
