--- a/pages/papich.html
+++ b/pages/papich.html
@@ -12,7 +12,7 @@
 	<link rel="stylesheet" href="../css/nav-style.css" />
 	<link rel="stylesheet" href="../css/main.css" />
 	<link rel="icon" href="../imgs/logo/Logo RQ png.png">
-	<title>Jojo's Random Quotes</title>
+	<title>Papich's Random Quotes</title>
 </head>
 <body>
 	<nav class="nav">
@@ -34,7 +34,8 @@
 				  	<ul>
 						<li><a href="jojo.html">JoJo’s Bizarre Adventure</a></li>
 						<li><a href="">Папич</a></li>
-						<li><a href="#">Куссия</a></li>
+						<li><a href="papich-ppl.html">Папич в картинках</a></li>
+						<li><a href="kussia.html">Куссия в картинках</a></li>
 				  	</ul>
 					</li>
 			  	</ul>
