--- a/index.html
+++ b/index.html
@@ -62,12 +62,13 @@
     </div>
 
 	<div class="container">
-		<p>Random Quotes ©️ это бесплатный проект для генерации случайной цитаты из фильма или аниме. Сейчас в нем есть только фразы из аниме "Невероятные приключения Джоджо", но скоро в нем будет много нового.</p>
+		<p>Random Quotes ©️ это бесплатный проект для генерации случайной цитаты из фильма или аниме. Тут уже есть фразы из аниме "Невероятные приключения Джоджо", цитаты Папича а так же cмешные картинки с Куссией, думаю, что скоро в нем будет много нового.</p>
 	</div>
 
 	<button id="jojo-btn" class="jojo-btn" onclick="document.location='pages/jojo.html'">Цитаты из ДжоДжо</button>
 	<button id="jojo-btn" class="jojo-btn" onclick="document.location='pages/papich.html'">Цитаты Папича</button>
 	<button id="jojo-btn" class="jojo-btn" onclick="document.location='pages/papich-ppl.html'">Цитаты Папича в картинках</button>
+	<button id="jojo-btn" class="jojo-btn" onclick="document.location='pages/kussia.html'">Куссия в картинках</button>
 
 	<form action="https://scramble22.github.io/My-portfolio/" target="_blank">
     	<button id="jojo-btn" class="jojo-btn">О разработчике</button>
