--- a/pages/kussia.html
+++ b/pages/kussia.html
@@ -26,10 +26,10 @@
 	            <i class="fas fa-times"></i>
 	          </button>
 
-	          <a href="index.html" ><img src="../imgs/logo/Logo RQ png.png" alt="Logo" class="logo" ></a>
+	          <a href="../index.html" ><img src="../imgs/logo/Logo RQ png.png" alt="Logo" class="logo" ></a>
 
 	          <ul class="list">
-	            <li><a href="pages/all-quotes.html">Все цитаты</a></li>
+	            <li><a href="../all-quotes.html">Все цитаты</a></li>
 	            <li>
 	              <ul>
 	                <li><a href="jojo.html">JoJo’s Bizarre Adventure</a></li>
